[gd_scene load_steps=3 format=4]

[ext_resource path="res://1.Codebase/src/scripts/ui/gloria_intervention_overlay.gd" type="Script" id="1"]
[ext_resource path="res://1.Codebase/src/assets/characters/portrait_gloria.png" type="Texture2D" id="2"]

[node name="GloriaInterventionOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Dim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.02, 0.18, 0.92)

[node name="HorrorBackground" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ContentPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(900, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -300.0
offset_right = 450.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="ContentPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBox" type="VBoxContainer" parent="ContentPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 28
alignment = 1

[node name="PortraitRow" type="HBoxContainer" parent="ContentPanel/Margin/VBox"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Portrait" type="TextureRect" parent="ContentPanel/Margin/VBox/PortraitRow"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 5

[node name="TitleBox" type="VBoxContainer" parent="ContentPanel/Margin/VBox/PortraitRow"]
custom_minimum_size = Vector2(400, 140)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="ContentPanel/Margin/VBox/PortraitRow/TitleBox"]
layout_mode = 2
text = "üíî ËÅñÊØç Gloria"
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="ContentPanel/Margin/VBox/PortraitRow/TitleBox"]
layout_mode = 2
text = "‰Ω†ÁúüÊòØÂ§™Ë≤†Èù¢‰∫Ü..."
vertical_alignment = 1

[node name="BodyText" type="RichTextLabel" parent="ContentPanel/Margin/VBox"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
fit_content = false
scroll_active = true

[node name="AIGuiltText" type="RichTextLabel" parent="ContentPanel/Margin/VBox"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 0.6, 0.6, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="Spacer" type="Control" parent="ContentPanel/Margin/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_filter = 2

[node name="ContinueButton" type="Button" parent="ContentPanel/Margin/VBox"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "...ÁπºÁ∫å"